Added more tests including testcontainers based e2e tests.